# tradingManagment

./: .gitignore  BINANCE_ORDER_VERIFICATION.md
services/control_plane/: ._.venv  .env  TRADING_SCHEDULER_README.md  check_balance.py  monitor.py  monitor_simple.py  pyproject.toml
services/control_plane/scripts/: ALIASES.md  README.md  dev-all.sh  kill-all.sh
services/control_plane/src/: .scheduler_state.json  app.py
services/control_plane/src/alerting/: risk_alerts.py  rule_alerts.py
services/control_plane/src/clients/: binance_th_client.py  cloudflare_config_client.py
services/control_plane/src/indicators/: __init__.py  action_zone.py  fibonacci.py  fibonacci_backup.py  fibonacci_new.py
services/control_plane/src/reports/: exporter.py  order_report_service.py  rule_audit.py  success_dashboard.py
services/control_plane/src/routes/: backtest.py  bot.py  config.py  fibonacci.py  kill_switch.py  live_rules.py  market.py  order_admin.py  order_sync.py  positions.py  rules.py  system.py
services/control_plane/src/telemetry/: config_metrics.py  rule_metrics.py
services/control_plane/src/trading/: __init__.py  order_sync.py  realtime_engine.py  scheduler.py
services/control_plane/src/ui/: account_link.py  backtest_view.py  bot_runner.py  config_portal.py  dashboard.py  layout.py  report_views.py
services/control_plane/src/validators/: __init__.py  config_validator.py
services/control_plane/tests/: mock_rules_payload.json
services/orchestrator/: pyproject.toml
services/orchestrator/src/config/: config_sync.py
services/signal_engine/: pyproject.toml
(+81 files in other folders)
