[tool.poetry]
name = "signal_engine"
version = "0.1.0"
description = "CDC Zone signal engine"
authors = ["CDC Bot Team"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.0"
"ta-lib" = "^0.4.28"
ccxt = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
hypothesis = "^6.98.0"
black = "^24.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
